InternexDev_Sandbox/src/objects/WF_REM__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Name__c</fullName>
        <formula>TRIM(SUBSTITUTE(SUBSTITUTE( Reference_2__c ,&quot;_&quot;,&apos;&apos;),&quot; &quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overflow_sequence_qualifier__c</fullName>
        <label>Overflow sequence qualifier (REM01B)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Action_code__c</fullName>
        <label>Payment Action code (REM12)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <defaultValue>&quot;REM&quot;</defaultValue>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_1__c</fullName>
        <label>Reference 1 (REM14)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_1_qualifier_description__c</fullName>
        <label>Reference 1 qualifier/description(REM13)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_2__c</fullName>
        <label>Reference 2 (REM16)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_2_qualifier_description__c</fullName>
        <label>Reference 2 qualifier/description(REM15)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_3__c</fullName>
        <label>Reference 3(REM18)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_3_qualifier_description__c</fullName>
        <label>Reference 3 qualifier/description(REM17)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remittance_Custom_Amount_2__c</fullName>
        <label>Remittance Custom Amount 2 (REM22)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_Custom_Amount_3__c</fullName>
        <label>Remittance Custom Amount 3(REM23)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_Custom_Amount_4__c</fullName>
        <label>Remittance Custom Amount 4(REM24)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_amount_due__c</fullName>
        <label>Remittance amount due (REM07)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_custom_amount1__c</fullName>
        <label>Remittance custom amount1(REM21)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_custom_date__c</fullName>
        <label>Remittance custom date(REM26)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remittance_date__c</fullName>
        <label>Remittance date (REM09)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remittance_discount_amount__c</fullName>
        <label>Remittance discount amount (REM06)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_gross_amount__c</fullName>
        <label>Remittance gross amount(REM05)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_gross_amount_formula__c</fullName>
        <formula>VALUE(MID(TEXT(Remittance_gross_amount__c),0,LEN(TEXT(Remittance_gross_amount__c))-2)+&apos;.&apos;+RIGHT(TEXT(Remittance_gross_amount__c),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remittance gross amount formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_late_amount__c</fullName>
        <label>Remittance late amount (REM08)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_net_amount_paid__c</fullName>
        <label>Remittance net amount paid(REM04)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_net_amount_paid_formula__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remittance net amount paid formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remittance_qualifier_description__c</fullName>
        <label>Remittance qualifier description(REM02)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remittance_reference__c</fullName>
        <label>Remittance reference (REM03)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remittance_sequence_number__c</fullName>
        <label>Remittance sequence number(REM01A)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_RMH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_RMH</label>
        <referenceTo>WF_RMH__c</referenceTo>
        <relationshipLabel>WF_REM</relationshipLabel>
        <relationshipName>WF_REM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>other_remittance_qualifier__c</fullName>
        <label>other remittance qualifier(REM10)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_remittance_reference__c</fullName>
        <label>other remittance reference (REM11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WF_REM</label>
    <nameField>
        <displayFormat>REM-{00000}</displayFormat>
        <label>WF_REM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_REM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>